--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+    # Firebase Core
+  firebase_core: ^2.24.2
+
+   # Firebase Services (choose what you need)
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.5.6
+  firebase_messaging: ^14.7.10
+  firebase_analytics: ^10.7.4
+
+   # Other dependencies you might need
+  google_sign_in: ^6.1.6
+  firebase_crashlytics: ^3.4.8
+
+
 
 dev_dependencies:
   flutter_test:
