--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,7 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
@@ -42,5 +43,6 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:34.2.0')
     implementation 'com.google.firebase:firebase-analytics'
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
 
 }
