--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,28 +46,25 @@ dependencies:
   firebase_messaging: ^14.7.10
   firebase_analytics: ^10.7.4
   flutter_html: ^3.0.0-beta.2
-
-
-
-   # Other dependencies you might need
   google_sign_in: ^6.1.6
   firebase_crashlytics: ^3.4.8
   shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_native_splash: ^2.4.3
+  flutter_launcher_icons: ^0.13.1
 
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
 
 
 # For information on the generic Dart part of this file, see the
