--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,31 +1,33 @@
 plugins {
     id "com.android.application"
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services'
+
 }
 
 android {
-    namespace = "com.sutterbuttes.recipes"
-    compileSdk = 35
+    namespace "com.sutterbuttes.recipes"
+    compileSdkVersion 35
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        coreLibraryDesugaringEnabled true
         sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility  = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = '1.8'
     }
 
     defaultConfig {
-        applicationId = "com.sutterbuttes.recipes"
-        minSdk = 23
-        targetSdk = 34
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        applicationId "com.sutterbuttes.recipes"
+        minSdkVersion 24
+        targetSdkVersion 35
+        versionCode 1
+        versionName '1.0.0'
     }
 
     buildTypes {
@@ -41,8 +43,8 @@ flutter {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:34.2.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
-
+    implementation('io.branch.sdk.android:library:5.8.0')
+    implementation(platform("com.google.firebase:firebase-bom:33.5.1"))
+    implementation("com.google.firebase:firebase-auth")
+    coreLibraryDesugaring('com.android.tools:desugar_jdk_libs:2.0.4')
 }
