--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sutterbuttes.recipes">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -7,7 +6,7 @@
 
 
     <application
-        android:label="sutterbuttes_recipe"
+        android:label="Sutter Buttes Recipes"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
