--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,15 @@
 buildscript {
+    ext.kotlin_version = '2.1.10'
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath 'com.google.gms:google-services:4.4.0'
+        classpath 'com.android.tools.build:gradle:8.4.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
     }
 }
 
