--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.15.1
   http: ^1.2.1
   provider: ^6.1.2
+  image_picker: ^1.1.2
 
    # Firebase Services (choose what you need)
   firebase_auth: ^5.6.2
