--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   firebase_crashlytics: ^4.3.9
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
+  flutter_facebook_auth: ^7.1.2
+  flutter_branch_sdk: ^8.9.0+1
+
 
 
 
@@ -116,5 +119,4 @@ flutter_native_splash:
   android_12:
     image: assets/images/Splash Screen Logo.jpg
     icon_background_color: "#ffffff"
-
 
