--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   image_picker: ^1.1.2
-
+  html_unescape: ^2.0.0
    # Firebase Services (choose what you need)
   firebase_auth: ^5.6.2
   cloud_firestore: ^5.6.12
