--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,14 +26,17 @@ android {
         applicationId "com.sutterbuttes.recipes"
         minSdkVersion 24
         targetSdkVersion 35
-        versionCode 3
-        versionName '1.0.2'
+        versionCode 4
+        versionName '1.0.3'
 
     }
+
 
     buildTypes {
         release {
 
+            minifyEnabled false
+            shrinkResources false
             signingConfig = signingConfigs.debug
         }
     }
