--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation(platform("com.google.firebase:firebase-bom:33.5.1"))
     implementation("com.google.firebase:firebase-auth")
     coreLibraryDesugaring('com.android.tools:desugar_jdk_libs:2.0.4')
+    // Facebook steup plugin
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 }
