--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.12+13
+version: 1.0.14+15
 
 environment:
   sdk: ^3.6.2
@@ -55,6 +55,7 @@ dependencies:
   flutter_branch_sdk: ^8.9.0+1
   flutter_stripe: ^11.5.0
   url_launcher: ^6.1.10
+  flutter_local_notifications: ^17.2.3
 
 
 
