--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_stripe: ^11.5.0
   url_launcher: ^6.1.10
   flutter_local_notifications: ^17.2.3
+  sign_in_with_apple: ^6.1.3
 
 
 
