--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.25+24
+version: 1.0.26+27
 
 environment:
   sdk: ^3.6.2
@@ -58,6 +58,8 @@ dependencies:
   url_launcher: ^6.1.10
   flutter_local_notifications: ^17.2.3
   sign_in_with_apple: ^6.1.3
+  printing: ^5.12.0
+  pdf: ^3.10.7
 
 
 
